fix(Rate): should enable flex wrap (#9193)

--- a/src/rate/index.less
+++ b/src/rate/index.less
@@ -2,6 +2,7 @@
 
 .van-rate {
   display: inline-flex;
+  flex-wrap: wrap;
   cursor: pointer;
   user-select: none;
 
